--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon backend/server/index.js --ignore frontend"
+    "dev": "nodemon backend/server/index.js --ignore frontend",
+    "start": "node backend/server/index.js",
+    "postinstall": "mkdir -p backend/server/temp_uploads"
   },
   "repository": {
     "type": "git",
