--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "morgan": "^1.10.0",
+    "simple-peer": "^9.11.1",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
   },
